--- a/project/project1/manifest.json
+++ b/project/project1/manifest.json
@@ -10,19 +10,13 @@
     
     
     "icons":{
-        "36":"plogo.jpg"
+        "64":"image/plogo.jpg"
     },
+      "permissions":["clipboardWrite","clipboardRead"],
+    "background":{
+        "scripts:" ["background_script.js"]
+        
+    }
 
-
-    "content_script": [
-      {
-        "js":["extension.js"]
-      },
-      
-      "permissions":[
-
-      ]
-
-}
-
+   }
 }
